@@ -89,6 +89,7 @@ INCLUDE select element_data = {
           options = countries
         text_attr = 'name'
        value_attr = 'id'
+   default_values = [country_id]
              name = 'country_id'
             label = 'Country'
 } ?>
